# django-nitro-mailer

./: .gitignore  README.md  conftest.py  dev_settings.py  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  urls.py
.github/workflows/: docs.yml  pypi.yml  tests.yml
django-nitro-mailer-docs/: mkdocs.yml
django-nitro-mailer-docs/docs/: installation.md  sending_emails.md
django_nitro_mailer/: __init__.py  admin.py  backend.py  backends.py  defaults.py  emails.py  forms.py  models.py  settings.py  tasks.py  utils.py
django_nitro_mailer/management/commands/: nitro_send_emails.py
django_nitro_mailer/migrations/: 0001_initial.py  0002_alter_email_priority.py  0003_emaillog_created_at.py
django_nitro_mailer/templates/admin/: email_change_form.html
django_nitro_mailer/tests/: test_emails.py  test_tasks.py
docs/: mkdocs.yml  quickstart.md
docs/pages/: about.md  environment_variables.md  index.md  installation.md  quickstart.md  sending-emails.md  sending_emails.md  settings.md
tests/: conftest.py  test_emails.py
